src/parser/grammar/test_samples/Invalid/namespace_multiple_declarations.5th
namespace First.Namespace;
namespace Second.Namespace;

main(): int {
    return 0;
}
